# ysc2229-examples

./: #test.ml#  .gitignore  Makefile  MidtermQ1.ml  Q7.1FindMinNoneg.ml  Q7.2Permutations.ml  Q7.3Allocator.ml  README.md  memory_manager.ml  test.ml  ysc2229-example-lib.opam
lib/: SortUtil.ml  dune
runners/: RunnerUtil.ml  compare_sorts.ml  dune  read_input.ml
